# app/src/main/kotlin/com/example/app/api/ChatController.kt
@@ -4,15 +4,10 @@ import com.example.app.Generators.randomSessionId
 import com.example.app.agents.ElvenAgent
 import com.example.app.api.model.Answer
 import com.example.app.api.model.ChatRequest
-import jakarta.validation.Valid
-import jakarta.validation.constraints.Pattern
 import org.slf4j.LoggerFactory
 import org.springframework.http.HttpHeaders
 import org.springframework.http.ResponseEntity
 import org.springframework.stereotype.Component
-import org.springframework.validation.annotation.Validated
-import org.springframework.web.bind.annotation.RequestBody
-import org.springframework.web.bind.annotation.RequestHeader
 
 @Component
 class ChatController(
@@ -24,14 +19,20 @@ class ChatController(
 
     override suspend fun chat(
         chatRequest: ChatRequest,
-        xSessionId: String?,
+        xSessionID: String?,
     ): ResponseEntity<Answer> {
         logger.info("Received chat request: {}", chatRequest)
-        val sessionId = xSessionId ?: randomSessionId()
-        val reply = agent.giveAdvice(chatSessionId = sessionId, input = chatRequest.message)
+        val sessionId = xSessionID ?: randomSessionId()
+
+        // run the agent
+        val reply =
+            agent.giveAdvice(
+                chatSessionId = sessionId,
+                input = chatRequest.message,
+            )
 
         val headers = HttpHeaders()
-        headers.set("X-Session-Id", sessionId)
+        headers.set(X_SESSION_ID_HEADER, sessionId)
 
         return ResponseEntity
             .ok()
